Fix hit testing for Elements tree items
A previous fix to this issue couldn't preserve the original behaviour,
and hit testing could not find the element on that row if the cursor
is above the indent space.

With this CL, hovering/selecting anywhere on the row (including indented
space) would highlight/select the element on that row, whether the
overlay scrollbar is enabled/disabled.

We use `::after` pseudo element on the TreeElement to overlay available indented space, such that hovering/selecting on indentation will now hit li's `::after` pseudo element instead of its ancestor's padding area.

Fixed: 1404874

--- a/front_end/panels/elements/elementsTreeOutline.css
+++ b/front_end/panels/elements/elementsTreeOutline.css
@@ -48,6 +48,7 @@
 
 .elements-disclosure li {
   /** Keep margin-left & padding-left in sync with ElementsTreeElements.updateDecorations **/
+  display: flex;
   padding: 1px 0 0 14px;
   margin-left: -2px;
   word-break: normal;
@@ -55,6 +56,14 @@
   min-height: 15px;
   line-height: 1.36;
   min-width: 200px;
+}
+
+.elements-disclosure li::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  left: calc(var(--indent) * -1);
+  width: var(--indent);
 }
 
 .elements-disclosure li.parent {
@@ -291,6 +300,7 @@ select {
   left: 0;
   width: 15px;
   height: 15px;
+  z-index: 1;
 }
 
 .elements-hide-gutter .gutter-container {
